# violette

./: dune-project  dune-workspace  violette.opam
docs/: README.md
src/cli/violette-cli/: dune-project  violette-cli.opam
src/cli/violette-cli/lib/: Cli.ml  dune
src/cli/violette-cli/test/: dune
src/compiler/backend/violette-stack-bytecode/: dune-project  violette-stack-bytecode.opam
src/compiler/backend/violette-stack-bytecode/lib/: Directive_set.ml  Instruction.ml  Section.ml  Stack_bytecode.ml  Value.ml  dune
src/compiler/backend/violette-stack-bytecode/test/: dune
src/compiler/frontend/violette-parser/: dune-project  violette-parser.opam
src/compiler/frontend/violette-parser/lib/: Parser.ml  dune
src/compiler/frontend/violette-parser/test/: dune
src/compiler/frontend/violette-surface-term/: violette-surface-term.opam
src/compiler/frontend/violette-token/: violette-token.opam
src/compiler/frontend/violette-token-type/: violette-token-type.opam
src/compiler/frontend/violette-tokenizer/: violette-tokenizer.opam
src/compiler/middleend/violette-atomic-core/: .ocamlformat  dune-project  violette-atomic-core.opam
src/compiler/middleend/violette-atomic-core/lib/: Atomic_core.ml  dune
src/compiler/middleend/violette-atomic-core/test/: dune
src/compiler/middleend/violette-atomic-normalization/: dune-project
src/compiler/middleend/violette-atomic-normalization/lib/: Atomic_normalization.ml  dune
src/compiler/middleend/violette-atomic-normalization/test/: dune
src/compiler/middleend/violette-core-term/: dune-project  violette-core-term.opam
src/compiler/middleend/violette-core-term/lib/: Core_term.ml  dune
src/compiler/middleend/violette-core-term/test/: dune
src/compiler/middleend/violette-elaboration/: dune-project
src/compiler/middleend/violette-lambda-core/: violette-lambda-core.opam
src/compiler/middleend/violette-normal-form/: violette-normal-form.opam
src/compiler/middleend/violette-surface-lowering/: dune-project
src/compiler/violette-compiler/: dune-project  violette-compiler.opam
src/compiler/violette-compiler/lib/: Artifact.ml  Compiler.ml  Output.ml  Target.ml  dune
src/compiler/violette-compiler/test/: dune
src/interpreter/violette-tree-walk-interpreter/: dune-project
src/interpreter/violette-tree-walk-interpreter/lib/: Tree_walk_interpreter.ml  dune
src/interpreter/violette-tree-walk-interpreter/test/: dune
src/reporting/violette-diagnostic/lib/: Diagnosis.ml  Diagnostic.ml  Error.ml  Info.ml  Mode.ml  Rendered_parts.ml  Warning.ml
src/reporting/violette-doctor/lib/: Doctor.ml  Review.ml
src/reporting/violette-doctor/test/: dune
src/representation/violette-better-fmt/: dune-project  violette-better-fmt.opam
src/representation/violette-better-fmt/lib/: dune
src/representation/violette-repr/: dune-project  violette-repr.opam
src/representation/violette-repr/lib/: Interface.ml  Repr.ml  dune
src/toolkit/violette-diagnostic/lib/: Diagnosis.ml  Error.ml  dune
src/toolkit/violette-diagnostic/test/: dune
src/toolkit/violette-doctor/lib/: Review.ml  dune
src/toolkit/violette-ext/lib/: dune
src/toolkit/violette-file/test/: dune
src/toolkit/violette-repr/test/: dune
src/toolkit/violette-span/test/: dune
src/toplevel/violette-toplevel/lib/: Toplevel.ml  dune
src/utils/violette-diagnostic/: dune-project
src/utils/violette-diagnostic/test/: dune
src/utils/violette-file/: violette-file.opam
src/utils/violette-repr/: dune-project
src/utils/violette-span/: dune-project
src/utils/violette-span/lib/: Position.ml  Span.ml  dune
src/utils/violette-span/test/: dune
src/violette-core-term/: dune-project
src/violette-core-term-normal-form/: dune-project  violette-core-term-normal-form.opam
src/violette-core-term-normal-form/lib/: Core_term_normal_form.ml  dune
src/violette-core-term-normal-form/test/: dune
src/violette-core-term/lib/: Core_term.ml  dune
src/violette-core-term/test/: dune
src/violette-curry/: dune-project  violette-curry.opam
src/violette-curry/lib/: Curry.ml  dune
src/violette-diagnostic/: violette-diagnostic.opam
src/violette-diagnostic/lib/: Diagnostic.ml  Error.ml  Info.ml  Rendered_parts.ml  dune
src/violette-diagnostic/test/: dune
src/violette-doctor/: dune-project  violette-doctor.opam
src/violette-doctor/lib/: Review.ml
src/violette-doctor/test/: dune
src/violette-error/: dune-project  violette-error.opam
src/violette-error/lib/: Error.ml  Type.ml  dune
src/violette-error/test/: dune
src/violette-ext/: dune-project  violette-ext.opam
src/violette-ext/lib/: Env.ml  Ext.ml  Fmt.ml  dune
src/violette-ext/test/: dune
src/violette-file/: dune-project
src/violette-file/lib/: File.ml  dune
src/violette-file/test/: dune
src/violette-lowering/: dune-project
src/violette-lowering/lib/: Lowering.ml  dune
src/violette-lowering/test/: dune
src/violette-normal-form/: dune-project  violette-normal-form-poly.opam
src/violette-normal-form/lib/: Normal_form_poly.ml  dune
src/violette-normal-form/test/: dune
src/violette-parser/lib/: Parser.ml  dune
src/violette-parser/test/: dune
src/violette-repr/: violette-repr.opam
src/violette-repr/lib/: Interface.ml  Repr.ml  dune
src/violette-span/: violette-span.opam
src/violette-span/lib/: Position.ml  Span.ml  dune
src/violette-surface-term/: dune-project
src/violette-surface-term/lib/: Surface_term.ml  dune
src/violette-surface-term/test/: dune
src/violette-token/: dune-project
src/violette-token-type/: dune-project
src/violette-token-type/lib/: Token_type.ml  dune
src/violette-token-type/test/: dune
src/violette-token/lib/: Token.ml  dune
src/violette-tokenizer/: dune-project
src/violette-tokenizer/lib/: Predicates.ml  Tokenizer.ml  dune
src/violette-tokenizer/test/: dune
src/violette-toplevel/: dune-project  violette-toplevel.opam
src/violette-toplevel/lib/: Toplevel.ml  dune
src/violette-toplevel/test/: dune
src/violette-tree-walk-interpreter/lib/: Tree_walk_interpreter.ml  dune
src/violette-tree-walk-interpreter/test/: dune
(+25 files in other folders)
