(lang dune 3.20)

(name violette-core-term-normal-form)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-core-term-normal-form)
 (synopsis "The normal form of Violette's core term language")
 (description
  "violette-core-term-normal-form provides a language that represents the normal form of Violette's core term one.")
 (depends
  (ocaml
   (>= 5.3))))
