(lang dune 3.20)

(name violette-error)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-error)
 (synopsis "A type that represents Violette errors")
 (description
  "violette-error provides a data type that is used across Violette to encode all the possible errors")
 (depends
  (ocaml
   (>= 5.3))))
