(lang dune 3.20)

(name violette-ext)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation "https://qexat.github.io/violette")

(package
 (name violette-ext)
 (synopsis "Extension of OCaml's standard library for Violette")
 (description
  "violette-ext is an extension of OCaml's standard library for the Violette programming language.")
 (depends
  (ocaml
   (>= 5.3)))
 (tags
  (extension stdlib ocaml violette)))
