(lang dune 3.20)

(name violette-file)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-file)
 (synopsis "A type to represent Violette files")
 (description
  "violette-file provides a data structure used by Violette's compiler to represent a file.")
 (depends
  (ocaml
   (>= 5.3))
  (ansifmt
   (>= 1.0.0~pre2)))
 (tags
  (file type violette)))
