(lang dune 3.20)

(name violette-normal-form-poly)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-normal-form-poly)
 (synopsis "A generic normal form for Violette runtime values")
 (description
  "violette-normal-form-poly provides a template normal form for various Violette interpreters.")
 (depends
  (ocaml
   (>= 5.3))))
