(lang dune 3.20)

(name violette-token)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name violette-token)
 (synopsis "A token type for Violette")
 (description
  "violette-token provides a data structure used by Violette's lexical analyzer.")
 (depends
  (ocaml
   (>= 5.3))))
