(lang dune 3.20)

(name violette-cli)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-cli)
 (synopsis "The CLI for Violette's toolchain")
 (description
  "violette-cli provides a command line interface for interacting with the toolchain of the Violette programming language from the shell.")
 (depends
  (ocaml
   (>= 5.3))
  (cmdline
   (>= 1.3))))
