(lang dune 3.20)

(name violette-repr)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-repr)
 (synopsis "Printing functions for Violette objects and internals")
 (description
  "violette-repr provides a representation model for all components of the Violette programming language and its implementation.")
 (depends
  (ocaml
   (>= 5.3))
  (ansifmt
   (>= 1.0.0~pre2))))
