(lang dune 3.20)

(name violette-stack-bytecode)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-stack-bytecode)
 (synopsis "A stack-oriented bytecode format for Violette")
 (description
  "violette-stack-bytecode provides a stack-oriented bytecode format that can be run by Violette's stack machine.")
 (depends
  (ocaml
   (>= 5.3))))
