(lang dune 3.20)

(name violette-parser)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-parser)
 (synopsis "The parser of Violette")
 (description
  "violette-parser provides a syntactic analyzer for the Violette programming language.")
 (depends
  (ocaml
   (>= 5.3))))
