(lang dune 3.20)

(name violette-atomic-core)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-atomic-core)
 (synopsis "The ANF for Violette's Lambda Core")
 (description
  "violette-atomic-core provides the atomic normal form of the Lambda Core intermediate representation of the Violette programming language.")
 (depends
  (ocaml
   (>= 5.3))))
