(lang dune 3.20)

(name violette-lambda-core)

(generate_opam_files true)

(source
 (github qexat/violette))

(authors "lexa <hello@lexa.qexat.com>")

(maintainers "lexa <hello@lexa.qexat.com>")

(license MIT)

(documentation https://qexat.github.io/violette)

(package
 (name violette-lambda-core)
 (synopsis "The core term language of Violette")
 (description
  "violette-lambda-core provides a term language used by Violette for semantic analysis and lowering.")
 (depends
  (ocaml
   (>= 5.3))))
